force-app/main/default/objects/Fit_Score_Call_Log__c/Fit_Score_Call_Log__c.object-meta.xml
<CustomObject>
    <label>Fit Score Call Log</label>
    <nameField>
        <label>Fit Score Call Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fit Score Call Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>