force-app/main/default/objects/Fit_Score_Call_Log__c/fields/Call_Body__c.field-meta.xml
<CustomField>
    <fullName>Call_Body__c</fullName>
    <label>Call Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>