force-app/main/default/objects/Fit_Score_Call_Log__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>