force-app/main/default/objects/Fit_Score_Call_Log__c/fields/Change_source__c.field-meta.xml
<CustomField>
    <fullName>Change_source__c</fullName>
    <label>Change source</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>