force-app/main/default/objects/Fit_Score_Call_Log__c/fields/Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Entity_Id__c</fullName>
    <label>Entity Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>