force-app/main/default/objects/Fit_Score_Call_Log__c/fields/Error_log__c.field-meta.xml
<CustomField>
    <fullName>Error_log__c</fullName>
    <label>Error log</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>