force-app/main/default/objects/Fit_Score_Call_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Read time out</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Response not 200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>