force-app/main/default/objects/Fit_Score_Call_Log__c/fields/JSONString_for_testing__c.field-meta.xml
<CustomField>
    <fullName>JSONString_for_testing__c</fullName>
    <description>shows the JSON format of the variables sent to Fit Calculation to be tested by API</description>
    <label>JSONString for testing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>