force-app/main/default/objects/Fit_Score_Call_Log__c/fields/User_which_run_transaction__c.field-meta.xml
<CustomField>
    <fullName>User_which_run_transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User which run transaction</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fit_Score_Call_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>