force-app/main/default/objects/Fit_Score_Call_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Response__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Entity_Id__c</columns>
    <columns>Error_Type__c</columns>
    <columns>Cause__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>