force-app/main/default/objects/Fit_Score_Call_Log__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Response__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Entity_Id__c</columns>
    <columns>Error_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>