force-app/main/default/objects/Fit_Score_Call_Log__c/listViews/Failed_Logs.listView-meta.xml
<ListView>
    <fullName>Failed_Logs</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>User_which_run_transaction__c</columns>
    <columns>Entity_Id__c</columns>
    <columns>Error_log__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
        <value>Successful</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Failed Logs</label>
</ListView>