force-app/main/default/objects/Fit_Score_Call_Log__c/listViews/Succesfull_logs.listView-meta.xml
<ListView>
    <fullName>Succesfull_logs</fullName>
    <columns>NAME</columns>
    <columns>Entity_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Successful</value>
    </filters>
    <label>Succesfull logs</label>
</ListView>